	* perl-cpan/webservice-amazon-route53: new spell, Perl interface to
	  Amazon Route 53 API

2016-12-08 Vlad Glagolev <stealth@sourcemage.org>
	* python-pypi/python-route53: new spell, simple Route53 API for Python
	  2.7/3.x, powered by requests

2016-12-05 Ismael Luceno <ismael@sourcemage.org>
	* utils/containers: new spell, Lightweight containers using Linux
	  user namespaces

2016-12-03 Treeve Jelbert <treeve@sourcemage.org>
	* kde5-apps/kxstitch: added - Cross stitch pattern editor
	* kde4-apps; delete kaffeine4, k9copy4, kraft, kmymoney, kwave4

2016-11-27 Treeve Jelbert <treeve@sourcemage.org>
	* kde.gpg: add 8633B4EA: public key "Elvis Angelaccio <elvis.angelaccio@kde.org>"

2016-11-26 Ismael Luceno <ismael@sourcemage.org>
	* mobile/cpuspeed: new spell, Userspace cpufreq governor
	* chat-im/utox: new spell, Lightweight Tox client

2016-11-25 Treeve Jelbert <treeve@sourcemage.org>
	* qt5-cmake/scribus: added, qt5 version of scribus

2016-11-23 Ismael Luceno <ismael@sourcemage.org>
	* chat-libs/c-toxcore: new spell, Secure instant messaging and
	  videoconferencing

2016-11-17 Treeve Jelbert <treeve@sourcemage.org>
	* xorg.gpg: add 6ADBB200: public key "Michel Daenzer <michel@daenzer.net>"

2016-11-11 Treeve Jelbert <treeve@sourcemage.org>
	* kde5-apps/tellico: added

2016-11-10 Treeve Jelbert <treeve@sourcemage.org>
	* kde-frameworks/syntax-highlighting: added

2016-11-07 Treeve Jelbert <treeve@sourcemage.org>
	* kde5-extra/kdiagram: business diagrams and charts

2016-11-06 Vlad Glagolev <stealth@sourcemage.org>
	* archive/zstd: new spell, fast real-time compression algorithm

2016-11-05 Pavel Vinogradov <public@sourcemage.org>
	* gnu.gpg: removed B88CDF85: Ralf Angeli <angeli@caeruleus.net>,
	  added 20485F50: Mosè Giordano <mose@gnu.org> (for auctex)

2016-11-03  Treeve Jelbert <treeve@sourcemage.org>
	* kde5-pim/kdepim: spell deprecated [replaced by pending-16.12/*]
	* move kde5-pim/gpgmepp  => kde5-extra/
	* move kde5-pim/kdgantt2 => kde5-extra/
