@@ -1,8 +1,0 @@
-source  $GRIMORE/CMAKE_CONFIGURE  &&
-message " Calligra now defines ProductSets:\n\
-Creative: Krita + Karbon\n\
-Desktop:Words Stage Sheets Author Karbon Krita Kexi Flow Plan Braindump\n\
-It is also possible to define your own product sets\n\n\
-I have defined\n\
-Office: Words + Sheets\n"
-config_query_list CPROD "Which product set?" OFFICE CREATIVE DESKTOP
