@@ -1,65 +1,0 @@
-source  $GRIMOIRE/KDE4_DEPENDS     &&
-depends perl    &&
-depends libpng  &&
-depends zlib    &&
-depends OPENGL  &&
-depends boost   &&
-depends shared-mime-info &&
-
-depends automoc &&
-optional_depends soprano  '' '-DCMAKE_DISABLE_FIND_PACKAGE_Soprano=1' 'handle RDF metadata in ODF' &&
-
-optional_depends freetype2      '' '' 'font support'   &&
-optional_depends fontconfig     '' '' ''   &&
-
-if [[ $CPROD != OFFICE ]];then
-#Karbon
-optional_depends pstoedit       '' '' 'Karbon eps import filter' &&
-
-# Kexi
-  depends bzip2  && 
-  depends sqlite &&
-  optional_depends mysql          '' '' 'import MySql to Kexi'      &&
-  optional_depends postgresql     '' '' 'import Postgresql to Kexi'&&
-
-#Krita
-optional_depends libkdcraw      '' '' 'process RAW photos'      &&
-optional_depends glew           '' '' 'OpenGL shaders in Krita' &&
-optional_depends gmm            '' '' 'Krita panorama plugin' &&
-optional_depends exiv2          '' '' 'decode photo tags'     &&
-optional_depends tiff           '' '' 'graphics support'      &&
-optional_depends openexr        '' '' 'Krita EXR filter'      &&
-optional_depends openjpeg       '' '' 'Krita graphics filters' &&
-optional_depends glpk           '' '' 'painterly mixer plugin' &&
-optional_depends tiff           '' '' 'graphics support'      &&
-optional_depends create         '' '' 'creative resources, brushes,  palettes etc' &&
-optional_depends fftw           '' '' 'faster image manipulation' &&
-optional_depends vc             '' '' 'vectorisation code' &&
-optional_depends libvisio       '' '' 'import Visio diagrams'
-fi &&
-
-# multiple things
-optional_depends icu            '' '' 'Unicode support' &&
-optional_depends lcms2          '' '' 'colour management'     &&
-optional_depends poppler        '' '' 'PDF support'           &&
-optional_depends attica         '' '-DCMAKE_DISABLE_FIND_PACKAGE_LibAttica=1' 'Get Hot New Stuff' &&
-optional_depends kactivities    '' '-DCMAKE_DISABLE_FIND_PACKAGE_KActivities=1' 'Kactivities support' &&
-optional_depends marble         '' '-DCMAKE_DISABLE_FIND_PACKAGE_Marble=1' 'show locations on a map' &&
-optional_depends qca2           '' '-DCMAKE_DISABLE_FIND_PACKAGE_QCA2=1' 'Crypro support' &&
-optional_depends libodfgen      '' '' 'various import filters'    &&
-optional_depends librevenge     '' '' 'various document import filters' &&
-#Stage
-optional_depends okular         '' '' 'OpenDocument Presenter plugin' &&
-
-if [[ $CPROD != CREATIVE ]];then
-
-#Tables
-optional_depends eigen3         '' ''  'for Tables'           &&
-optional_depends gsl            '' '' 'improved maths'        &&
-#Words
-#optional_depends libetonyek '' '' 'Apple Keynote Document Library'
-optional_depends libwpg         '' '' 'WordPerfect graphics'  &&
-optional_depends libwpd         '' '' 'WordPerfect import'    &&
-optional_depends libwps         '' '' 'MS Works import'
-#
-fi
