@@ -1,15 +1,0 @@
-           SPELL=calligra
-         VERSION=2.8.5
-     SOURCE_HASH=sha512:09e32b7ce2415daae2ac3c1871fc1bc270210cbf5bc774f622922f8adb20e639db3dfb16c2974404b4395b30f8367a7ddd0016363a8b3e46fa24ff3fde1e4c14
-       SOURCE=$SPELL-$VERSION.tar.xz
-SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
-        WEB_SITE=http://www.calligra-suite.org/
-       SOURCE_URL=http://download.kde.org/stable/$SPELL-$VERSION/$SOURCE
-         ENTERED=2012-05-10
-      LICENSE[0]=GPL
-        KEYWORDS="kde office"
-           SHORT="Full office suite"
-cat << EOF
-The Calligra Suite is Calligra for the desktop. It offers a comprehensive set 
-of 8 applications which satisfies the office, graphics and management needs.
-EOF
