@@ -1,3 +1,0 @@
-default_pre_build &&
-cd $SOURCE_DIRECTORY &&
-cp $SPELL_DIRECTORY/office.cmake cmake/productsets
