@@ -1,20 +1,0 @@
-set( CALLIGRA_SHOULD_BUILD_PRODUCTS
-    WORDS_APP SHEETS_APP AUTHOR_APP
-    FILTER_CSV_TO_SHEETS
-    FILTER_HTML_TO_ODS
-    FILTER_OPENCALC_TO_SHEETS
-    FILTER_XLSX_TO_ODS
-    FILTER_XLS_TO_SHEETS
-    FILTER_SHEETS_TO_CSV
-    FILTER_SHEETS_TO_OPENCALC
-    FILTER_SHEETS_TO_XLS
-    FILTER_DOC_TO_ODT
-    FILTER_DOCX_TO_ODT
-    FILTER_ODT_TO_ASCII
-    FILTER_RTF_TO_ODT
-    FILTER_ODT_TO_MOBI
-    FILTER_ODT_TO_EPUB2
-    FILTER_ODT_TO_HTML
-     
-)
-
