@@ -1,32 +1,0 @@
-2016-08-18 Treeve Jelbert <treeve@sourcemage.org>
-	* DEPENDS: delete kdepimlibs
-
-2015-05-23 Treeve Jelbert <treeve@sourcemage.org>
-	* DEPENDS, CONFIGURE: remove unneeded stuff
-
-2014-08-21 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 2.8.5
-	* office.cmake, PRE_BUILD: added
-	* CONFIGURE, BUILD, DEPENDs: adapt to product sets
-
-2013-03-14 Ladislav Hagara <hgr@vabo.cz>
-	* DETAILS: 2.6.2
-
-2013-02-05 Ladislav Hagara <hgr@vabo.cz>
-	* DETAILS: 2.6.0
-
-2013-01-24 Ladislav Hagara <hgr@vabo.cz>
-	* DETAILS: 2.5.5
-
-2012-09-13 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 2.5.2
-
-2012-08-30 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 2.5.1
-
-2012-05-31 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 2.4.2
-
-2012-05-10 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 2.4.1
-	  this is a new spell derived from the koffice2 spell
