@@ -104,6 +104,9 @@
 	* utils/containers: new spell, Lightweight containers using Linux
 	  user namespaces
 
+2016-12-05 Treeve Jelbert <treeve@sourcemage.org>
+	* kde4-apps/calligra: deleted
+
 2016-12-03 Treeve Jelbert <treeve@sourcemage.org>
 	* kde5-apps/kxstitch: added - Cross stitch pattern editor
 	* kde4-apps; delete kaffeine4, k9copy4, kraft, kmymoney, kwave4
